syntax = "proto3";

package taskmanager.pb;
import "Verification.proto";

option go_package = "github.com/DiarmuidMalanaphy/Task-Manager/standards";
message AddUserRequest {
	InitialVerification verification = 1;
}

