
syntax = "proto3";

package taskmanager.pb;

option go_package = "github.com/DiarmuidMalanaphy/Task-Manager/server/proto_standards";
import "Verification.proto";

message RemoveUserRequest {
	VerificationToken token = 1;
}

