syntax = "proto3";

package taskmanager.pb;
import "Verification.proto";
option go_package = "github.com/diarmuidmalanaphy/Task-Manager/standards";

message LoginRequest {
	Verification verification = 1;
}

