
syntax = "proto3";

package taskmanager.pb;

import "Verification.proto";
option go_package = "github.com/DiarmuidMalanaphy/Task-Manager/standards";

message VerifyUserExistsRequest {
	Verification verification = 1;
}
